package Entities;

public enum PatientState {
    WAITING, RECOVERED, DISCHARGED
}
