package Main;

import System.LoginDemo.LoginDemoMain;

public class Entry {

    public static void main(String[] args) {
        LoginDemoMain.main(args);
    }
}
